fixed app logic

--- a/index.html
+++ b/index.html
@@ -9,36 +9,37 @@
   <title>Tic Tac Toe</title>
 </head>
 <body>
- <div class="container">
-  <div class="col-md-6 col-md-offset-3" id="panel">
+  {{$data|json}}
+  <div class="container"> 
+   <div class="col-md-6 col-md-offset-3" id="panel"> 
 
-    <div class="jumbotron">
+    <div class="jumbotron"> 
 
       <div class="row" id="row-A">
-        <div class="col-md-4" @click="clicked('row-A','1')"> </div>
+        <div class="col-xs-4" @click="clicked('row-A','1')"> </div>
 
-        <div class="col-md-4" @click="clicked('row-A','2')"></div>
+        <div class="col-xs-4" @click="clicked('row-A','2')"></div>
 
-        <div class="col-md-4" @click="clicked('row-A','3')"></div>
+        <div class="col-xs-4" @click="clicked('row-A','3')"></div>
       </div>
 
       <div class="row" id="row-B">
 
-        <div class="col-md-4" @click="clicked('row-B','1')"></div>
-        <div class="col-md-4" @click="clicked('row-B','2')"></div>
-        <div class="col-md-4" @click="clicked('row-B','3')"></div>
+        <div class="col-xs-4" @click="clicked('row-B','1')"></div>
+        <div class="col-xs-4" @click="clicked('row-B','2')"></div>
+        <div class="col-xs-4" @click="clicked('row-B','3')"></div>
       </div>
 
       <div class="row" id="row-C">
-        <div class="col-md-4" @click="clicked('row-C','1')"></div>
-        <div class="col-md-4" @click="clicked('row-C','2')"></div>
-        <div class="col-md-4" @click="clicked('row-C','3')"></div>
+        <div class="col-xs-4" @click="clicked('row-C','1')"></div>
+        <div class="col-xs-4" @click="clicked('row-C','2')"></div>
+        <div class="col-xs-4" @click="clicked('row-C','3')"></div>
       </div>
 
 
-    </div>
-  </div>
-</div>
+    </div> 
+  </div> 
+</div> 
 
 
 <script src="https://code.jquery.com/jquery.min.js"></script>
